Update HTML for local images/audio, personalize next.html, and improve adventure flow

--- a/ai journey website /ai_journey.html
+++ b/ai journey website /ai_journey.html
@@ -61,16 +61,11 @@
 </head>
 <body>
   <h1>My AI Journey Begins!</h1>
-  <p>Welcome, brave explorer. You stand before a glowing portal to a new world of tech...</p>
   <div class="portal">
-    ✨✨✨✨✨✨✨✨<br>
-  ✨&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨<br>
-✨&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[ 🚪 ]&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨<br>
-  ✨&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;✨<br>
-    ✨✨✨✨✨✨✨✨
+    <img src="image/portal copy.png" alt="Portal" style="max-width: 350px; width: 90%; margin-top: 2em; border-radius: 18px; box-shadow: 0 0 30px #00ffff;" />
   </div>
-  <p>Step through, and let the code guide your path... 🌀</p>
-
+  <p>Welcome, brave explorer. You stand before a portal to a new world of tech...<br>
+  Will you step through and accept the challenge that awaits?</p>
   <label for="nameInput">What is your name, brave explorer? ✨</label><br>
   <input type="text" id="nameInput" placeholder="Type your name here...">
 
@@ -78,7 +73,7 @@
   <a class="btn" id="startBtn" href="#">Start Your Quest 🚀</a>
 
   <audio id="bg-music" autoplay loop>
-    <source src="https://cdn.pixabay.com/download/audio/2022/10/09/audio_53e3c93cfa.mp3?filename=fantasy-game-background-loop-114008.mp3" type="audio/mpeg">
+    <source src="audio/aylex-tension-rising.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
