update ai journey website

--- a/ai journey website /ai_journey.html
+++ b/ai journey website /ai_journey.html
@@ -6,7 +6,7 @@
   <title>My AI Journey Begins!</title>
   <style>
     body {
-      background: linear-gradient(#0f0f1e, #1c1c2e);
+      background: #000000;
       color: #fff5f0;
       font-family: 'Courier New', monospace;
       text-align: center;
@@ -62,7 +62,7 @@
 <body>
   <h1>My AI Journey Begins!</h1>
   <div class="portal">
-    <img src="image/portal copy.png" alt="Portal" style="max-width: 350px; width: 90%; margin-top: 2em; border-radius: 18px; box-shadow: 0 0 30px #00ffff;" />
+    <img src="image/portal.png" alt="Portal" style="max-width: 350px; width: 90%; margin-top: 2em; border-radius: 18px; box-shadow: 0 0 30px #00ffff;" />
   </div>
   <p>Welcome, brave explorer. You stand before a portal to a new world of tech...<br>
   Will you step through and accept the challenge that awaits?</p>
